<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="13dip"/> 
         
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
        
        <RadioGroup   
            android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/main_radio" android:background="@drawable/maintab_toolbar_bg"   
            android:layout_width="fill_parent" android:layout_height="wrap_content">  
            <RadioButton  android:id="@id/radio_button0" android:layout_marginTop="2.0dip" android:text="@string/prediction" android:drawableTop="@drawable/radio_button0" style="@style/main_tab_bottom" />  
            <RadioButton  android:id="@id/radio_button1" android:layout_marginTop="2.0dip" android:text="@string/information" android:drawableTop="@drawable/radio_button1" style="@style/main_tab_bottom" />  
            <RadioButton  android:id="@id/radio_button2" android:layout_marginTop="2.0dip" android:text="@string/picknumber" android:drawableTop="@drawable/radio_button2" style="@style/main_tab_bottom" />  
            <RadioButton  android:id="@id/radio_button3" android:layout_marginTop="2.0dip" android:text="@string/mynumbers" android:drawableTop="@drawable/radio_button3" style="@style/main_tab_bottom" />  
            <RadioButton  android:id="@id/radio_button4" android:layout_marginTop="2.0dip" android:text="@string/moremore" android:drawableTop="@drawable/radio_button4" style="@style/main_tab_bottom" />  
        </RadioGroup>  
   
        </LinearLayout>

</LinearLayout>
